--- a/room_cards.html
+++ b/room_cards.html
@@ -6,9 +6,7 @@
     <link rel="icon" href="favicon.ico">
     <title>Карточки номеров</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
@@ -19,90 +17,105 @@
     <main class="main">
       <ul class="card-list">
 
-        <li class="card-list__item">
+        <li class="card-list__item card-wrapper">
           <section class="card">
-            <h3 class="card__title">
-              <a class="card-title__link" href="">Представительский люкс</a>
-            </h3>
+            <a class="card__title-link" href="">
+              <h3 class="card__title">Представительский люкс</h3>
+            </a>
             <p class="card__description">Эксклюзивный номер с панорамным видом на центр города Москвы</p>
             <hr class="card__line">
             <div class="card__footer">
-              <div class="card__area-price">
-                <span class="area-price__head">Цена за сутки</span>
-                <span class="area-price__text">от <span class="area-price__cost">7 900</span> <span class="area-price__symbol">₽</span></span>
+              <div class="area-price card__area-price">
+                <p class="area-price__head">Цена за сутки</p>
+                <p class="area-price__text">от <span class="area-price__cost">7 900</span> <span class="area-price__symbol-money">₽</span></p>
               </div>
               <div class="card__area-button">
-                <a class="card__button"><span class="card__button-inner">Забронировать</span></a>
+                <button class="card__button button">
+                  <span class="button__text">Забронировать</span>
+                </button>
               </div>
             </div>
           </section>
-          <div class="card__overlay"></div>
-          <div class="card__reserved-wrapper">
-            <div class="card__reserved">
-              <span class="reserved__text">Номер зарезервирован<br>Перейти к <a class="text__link" href="">оплате</a></span>
+          <div class="card-wrapper__overlay"></div>
+          <div class="card-wrapper__reserved-wrapper">
+            <div class="card-wrapper__reserved reserved">
+              <p class="reserved__text">Номер зарезервирован</p>
+              <p class="reserved__text">Перейти к <a class="reserved__text-link" href="">оплате</a></p>
             </div>
           </div>
-          <div class="best-price">Гарантия лучшей цены!</div>
-          <picture class="card-box__image-container">
-            <img class="card-box__image" src="img/room_1.jpg" alt="Представительский люкс">
+          <div class="best-price">
+            <span class="best-price__text">Гарантия лучшей цены!</span>
+          </div>
+          <picture class="card-wrapper__image-container">
+            <img class="card-wrapper__image" width="744" height="744" src="img/room_1.jpg" alt="Представительский люкс">
           </picture>
         </li>
 
-        <li class="card-list__item">
+        <li class="card-list__item card-wrapper">
           <section class="card">
-            <h3 class="card__title">
-              <a class="card-title__link" href="">Дуплекс</a>
-            </h3>
+            <a class="card__title-link" href="">
+              <h3 class="card__title">Дуплекс</h3>
+            </a>
             <p class="card__description">Просторный двухкомнатный номер с шикарным видом на парк</p>
             <hr class="card__line">
             <div class="card__footer">
-              <div class="card__area-price">
-                <span class="area-price__head">Цена за сутки</span>
-                <span class="area-price__text">от <span class="area-price__cost">5 700</span> <span class="area-price__symbol">₽</span></span>
+              <div class="area-price card__area-price">
+                <p class="area-price__head">Цена за сутки</p>
+                <p class="area-price__text">от <span class="area-price__cost">5 700</span> <span class="area-price__symbol-money">₽</span></p>
               </div>
               <div class="card__area-button">
-                <a class="card__button">Забронировать</a>
+                <button class="card__button button">
+                  <span class="button__text">Забронировать</span>
+                </button>
               </div>
             </div>
           </section>
-          <div class="card__overlay"></div>
-          <div class="card__reserved-wrapper">
-            <div class="card__reserved">
-              <span class="reserved__text">Номер зарезервирован<br>Перейти к <a class="text__link" href="">оплате</a></span>
+          <div class="card-wrapper__overlay"></div>
+          <div class="card-wrapper__reserved-wrapper">
+            <div class="card-wrapper__reserved reserved">
+              <p class="reserved__text">Номер зарезервирован</p>
+              <p class="reserved__text">Перейти к <a class="reserved__text-link" href="">оплате</a></p>
             </div>
           </div>
-          <div class="best-price best-price--active">Гарантия лучшей цены!</div>
-          <picture class="card-box__image-container">
-            <img class="card-box__image" src="img/room_2.jpg" alt="Дуплекс">
+          <div class="best-price best-price--active">
+            <span class="best-price__text">Гарантия лучшей цены!</span>
+          </div>
+          <picture class="card-wrapper__image-container">
+            <img class="card-wrapper__image" width="744" height="744" src="img/room_2.jpg" alt="Дуплекс">
           </picture>
         </li>
 
-        <li class="card-list__item">
+        <li class="card-list__item card-wrapper">
           <section class="card">
-            <h3 class="card__title">
-              <a class="card-title__link" href="">Бизнес-люкс</a>
-            </h3>
+            <a class="card__title-link" href="">
+              <h3 class="card__title">Бизнес-люкс</h3>
+            </a>
             <p class="card__description">Трёхкомнатный номер с панорамным видом на Москва-реку</p>
             <hr class="card__line">
             <div class="card__footer">
-              <div class="card__area-price">
-                <span class="area-price__head">Цена за сутки</span>
-                <span class="area-price__text"> от <span class="area-price__cost">4 900</span> <span class="area-price__symbol">₽</span></span>
+              <div class="area-price card__area-price">
+                <p class="area-price__head">Цена за сутки</p>
+                <p class="area-price__text"> от <span class="area-price__cost">4 900</span> <span class="area-price__symbol-money">₽</span></p>
               </div>
               <div class="card__area-button">
-                <a class="card__button">Забронировать</a>
+                <button class="card__button button">
+                  <span class="button__text">Забронировать</span>
+                </button>
               </div>
             </div>
           </section>
-          <div class="card__overlay"></div>
-          <div class="card__reserved-wrapper">
-            <div class="card__reserved">
-              <span class="reserved__text">Номер зарезервирован<br>Перейти к <a class="text__link" href="">оплате</a></span>
+          <div class="card-wrapper__overlay"></div>
+          <div class="card-wrapper__reserved-wrapper">
+            <div class="card-wrapper__reserved reserved">
+              <p class="reserved__text">Номер зарезервирован</p>
+              <p class="reserved__text">Перейти к <a class="reserved__text-link" href="">оплате</a></p>
             </div>
           </div>
-          <div class="best-price">Гарантия лучшей цены!</div>
-          <picture class="card-box__image-container card-box__image-container">
-            <img class="card-box__image" src="img/room_3.jpg" alt="Бизнес-люкс">
+          <div class="best-price">
+            <span class="best-price__text">Гарантия лучшей цены!</span>
+          </div>
+          <picture class="card-wrapper__image-container">
+            <img class="card-wrapper__image" width="744" height="744" src="img/room_3.jpg" alt="Бизнес-люкс">
           </picture>
         </li>
 
