--- a/room_cards.html
+++ b/room_cards.html
@@ -47,7 +47,9 @@
             <span class="best-price__text">Гарантия лучшей цены!</span>
           </div>
           <picture class="card-wrapper__image-container">
-            <img class="card-wrapper__image" width="744" height="744" src="img/room_1.jpg" alt="Представительский люкс">
+            <source srcset="img/room_1_medium.jpg" media="(max-width: 767px)">
+            <source srcset="img/room_1_medium.jpg" media="(max-width: 1279px)">
+            <img class="card-wrapper__image" src="img/room_1.jpg" width="372" height="372" alt="Представительский люкс">
           </picture>
         </li>
 
@@ -81,7 +83,9 @@
             <span class="best-price__text">Гарантия лучшей цены!</span>
           </div>
           <picture class="card-wrapper__image-container">
-            <img class="card-wrapper__image" width="744" height="744" src="img/room_2.jpg" alt="Дуплекс">
+            <source srcset="img/room_2_medium.jpg" media="(max-width: 767px)">
+            <source srcset="img/room_2_medium.jpg" media="(max-width: 1279px)">
+            <img class="card-wrapper__image" src="img/room_2.jpg" width="372" height="372" alt="Дуплекс">
           </picture>
         </li>
 
@@ -115,7 +119,9 @@
             <span class="best-price__text">Гарантия лучшей цены!</span>
           </div>
           <picture class="card-wrapper__image-container">
-            <img class="card-wrapper__image" width="744" height="744" src="img/room_3.jpg" alt="Бизнес-люкс">
+            <source srcset="img/room_3_medium.jpg" media="(max-width: 767px)">
+            <source srcset="img/room_3_medium.jpg" media="(max-width: 1279px)">
+            <img class="card-wrapper__image" src="img/room_3.jpg" width="372" height="372" alt="Бизнес-люкс">
           </picture>
         </li>
 
