--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
     <header class="header">
       <h1 class="header__title">НОМЕРА И ЦЕНЫ</h1>
     </header>
-
     <main class="main">
       <ul class="card-list">
-
-        <li class="card-list__item card-wrapper">
+        <li class="card-list__item card-wrapper card-wrapper--active">
           <section class="card">
             <a class="card__title-link" href="">
               <h3 class="card__title">Представительский люкс</h3>
@@ -47,13 +45,12 @@
             <span class="best-price__text">Гарантия лучшей цены!</span>
           </div>
           <picture class="card-wrapper__image-container">
-            <source srcset="img/room_1_medium.jpg" media="(max-width: 767px)">
+            <source srcset="img/room_1_small.jpg" media="(max-width: 767px)">
             <source srcset="img/room_1_medium.jpg" media="(max-width: 1279px)">
             <img class="card-wrapper__image" src="img/room_1.jpg" width="372" height="372" alt="Представительский люкс">
           </picture>
         </li>
-
-        <li class="card-list__item card-wrapper">
+        <li class="card-list__item card-wrapper card-wrapper--active">
           <section class="card">
             <a class="card__title-link" href="">
               <h3 class="card__title">Дуплекс</h3>
@@ -83,13 +80,12 @@
             <span class="best-price__text">Гарантия лучшей цены!</span>
           </div>
           <picture class="card-wrapper__image-container">
-            <source srcset="img/room_2_medium.jpg" media="(max-width: 767px)">
+            <source srcset="img/room_2_small.jpg" media="(max-width: 767px)">
             <source srcset="img/room_2_medium.jpg" media="(max-width: 1279px)">
             <img class="card-wrapper__image" src="img/room_2.jpg" width="372" height="372" alt="Дуплекс">
           </picture>
         </li>
-
-        <li class="card-list__item card-wrapper">
+        <li class="card-list__item card-wrapper card-wrapper--active">
           <section class="card">
             <a class="card__title-link" href="">
               <h3 class="card__title">Бизнес-люкс</h3>
@@ -119,12 +115,11 @@
             <span class="best-price__text">Гарантия лучшей цены!</span>
           </div>
           <picture class="card-wrapper__image-container">
-            <source srcset="img/room_3_medium.jpg" media="(max-width: 767px)">
+            <source srcset="img/room_3_small.jpg" media="(max-width: 767px)">
             <source srcset="img/room_3_medium.jpg" media="(max-width: 1279px)">
             <img class="card-wrapper__image" src="img/room_3.jpg" width="372" height="372" alt="Бизнес-люкс">
           </picture>
         </li>
-
       </ul>
     </main>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
