--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
               <p class="reserved__text">Перейти к <a class="reserved__text-link" href="">оплате</a></p>
             </div>
           </div>
-          <div class="best-price">
-            <span class="best-price__text">Гарантия лучшей цены!</span>
-          </div>
+          <div class="best-price"></div>
           <picture class="card-wrapper__image-container">
             <source srcset="img/room_1_small.jpg" media="(max-width: 767px)">
             <source srcset="img/room_1_medium.jpg" media="(max-width: 1279px)">
@@ -111,9 +109,7 @@
               <p class="reserved__text">Перейти к <a class="reserved__text-link" href="">оплате</a></p>
             </div>
           </div>
-          <div class="best-price">
-            <span class="best-price__text">Гарантия лучшей цены!</span>
-          </div>
+          <div class="best-price"></div>
           <picture class="card-wrapper__image-container">
             <source srcset="img/room_3_small.jpg" media="(max-width: 767px)">
             <source srcset="img/room_3_medium.jpg" media="(max-width: 1279px)">
