--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0">
     <title>Карточки номеров</title>
     <link rel="icon" href="favicon.ico">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style_old.css">
   </head>
   <body class="page__body">
     <header class="header">
@@ -18,7 +16,7 @@
         <li class="card-list__item card-wrapper card-wrapper--active">
           <section class="card">
             <a class="card__title-link" href="">
-              <h3 class="card__title">Представительский люкс</h3>
+              <h2 class="card__title">Представительский люкс</h2>
             </a>
             <p class="card__description">Эксклюзивный номер с панорамным видом на центр города Москвы</p>
             <hr class="card__line">
@@ -51,7 +49,7 @@
         <li class="card-list__item card-wrapper card-wrapper--active">
           <section class="card">
             <a class="card__title-link" href="">
-              <h3 class="card__title">Дуплекс</h3>
+              <h2 class="card__title">Дуплекс</h2>
             </a>
             <p class="card__description">Просторный двухкомнатный номер с шикарным видом на парк</p>
             <hr class="card__line">
@@ -86,7 +84,7 @@
         <li class="card-list__item card-wrapper card-wrapper--active">
           <section class="card">
             <a class="card__title-link" href="">
-              <h3 class="card__title">Бизнес-люкс</h3>
+              <h2 class="card__title">Бизнес-люкс</h2>
             </a>
             <p class="card__description">Трёхкомнатный номер с панорамным видом на Москва-реку</p>
             <hr class="card__line">
@@ -118,7 +116,6 @@
         </li>
       </ul>
     </main>
-    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script src="js/ext.js"></script>
   </body>
 </html>
