style.scss разделён на несколько файлов

--- a/source/index.html
+++ b/source/index.html
@@ -18,7 +18,7 @@
   <ul class="card-list">
     <li class="card-list__item card-wrapper card-wrapper--active">
       <section class="card">
-        <a class="card__title-link" href="">
+        <a class="card__title-link" href="#">
           <h2 class="card__title">Представительский люкс</h2>
         </a>
         <p class="card__description">Эксклюзивный номер с панорамным видом на центр города Москвы</p>
@@ -39,7 +39,7 @@
       <div class="card-wrapper__reserved-wrapper">
         <div class="card-wrapper__reserved reserved">
           <p class="reserved__text">Номер зарезервирован</p>
-          <p class="reserved__text">Перейти к <a class="reserved__text-link" href="">оплате</a></p>
+          <p class="reserved__text">Перейти к <a class="reserved__text-link" href="#">оплате</a></p>
         </div>
       </div>
       <div class="best-price"></div>
@@ -51,7 +51,7 @@
     </li>
     <li class="card-list__item card-wrapper card-wrapper--active">
       <section class="card">
-        <a class="card__title-link" href="">
+        <a class="card__title-link" href="#">
           <h2 class="card__title">Дуплекс</h2>
         </a>
         <p class="card__description">Просторный двухкомнатный номер с шикарным видом на парк</p>
@@ -72,7 +72,7 @@
       <div class="card-wrapper__reserved-wrapper">
         <div class="card-wrapper__reserved reserved">
           <p class="reserved__text">Номер зарезервирован</p>
-          <p class="reserved__text">Перейти к <a class="reserved__text-link" href="">оплате</a></p>
+          <p class="reserved__text">Перейти к <a class="reserved__text-link" href="#">оплате</a></p>
         </div>
       </div>
       <div class="best-price best-price--active">
@@ -86,7 +86,7 @@
     </li>
     <li class="card-list__item card-wrapper card-wrapper--active">
       <section class="card">
-        <a class="card__title-link" href="">
+        <a class="card__title-link" href="#">
           <h2 class="card__title">Бизнес-люкс</h2>
         </a>
         <p class="card__description">Трёхкомнатный номер с панорамным видом на Москва-реку</p>
@@ -107,7 +107,7 @@
       <div class="card-wrapper__reserved-wrapper">
         <div class="card-wrapper__reserved reserved">
           <p class="reserved__text">Номер зарезервирован</p>
-          <p class="reserved__text">Перейти к <a class="reserved__text-link" href="">оплате</a></p>
+          <p class="reserved__text">Перейти к <a class="reserved__text-link" href="#">оплате</a></p>
         </div>
       </div>
       <div class="best-price"></div>
