Изменение каталогов изображений

--- a/source/index.html
+++ b/source/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Карточки номеров</title>
   <link rel="icon" href="favicon.ico">
-  <link rel="icon" href="img/favicons/icon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="img/favicons/apple.png">
+  <link rel="icon" href="images/favicons/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="images/favicons/apple.png">
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="page__body">
 <header class="header">
-  <h1 class="header__title">НОМЕРА И ЦЕНЫ</h1>
+  <h1 class="header__title">Номера и цены</h1>
 </header>
 <main class="main">
   <ul class="card-list">
@@ -44,9 +44,9 @@
       </div>
       <div class="best-price"></div>
       <picture class="card-wrapper__image-container">
-        <source srcset="img/room_1_small.jpg" media="(max-width: 767px)">
-        <source srcset="img/room_1_medium.jpg" media="(max-width: 1279px)">
-        <img class="card-wrapper__image" src="img/room_1.jpg" width="372" height="372" alt="Представительский люкс">
+        <source srcset="images/content/room_1_mobile.jpg" media="(max-width: 767px)">
+        <source srcset="images/content/room_1_tablet.jpg" media="(max-width: 1279px)">
+        <img class="card-wrapper__image" src="images/content/room_1.jpg" width="372" height="372" alt="Представительский люкс">
       </picture>
     </li>
     <li class="card-list__item card-wrapper card-wrapper--active">
@@ -79,9 +79,9 @@
         <span class="best-price__text">Гарантия лучшей цены!</span>
       </div>
       <picture class="card-wrapper__image-container">
-        <source srcset="img/room_2_small.jpg" media="(max-width: 767px)">
-        <source srcset="img/room_2_medium.jpg" media="(max-width: 1279px)">
-        <img class="card-wrapper__image" src="img/room_2.jpg" width="372" height="372" alt="Дуплекс">
+        <source srcset="images/content/room_2_mobile.jpg" media="(max-width: 767px)">
+        <source srcset="images/content/room_2_tablet.jpg" media="(max-width: 1279px)">
+        <img class="card-wrapper__image" src="images/content/room_2.jpg" width="372" height="372" alt="Дуплекс">
       </picture>
     </li>
     <li class="card-list__item card-wrapper card-wrapper--active">
@@ -112,13 +112,13 @@
       </div>
       <div class="best-price"></div>
       <picture class="card-wrapper__image-container">
-        <source srcset="img/room_3_small.jpg" media="(max-width: 767px)">
-        <source srcset="img/room_3_medium.jpg" media="(max-width: 1279px)">
-        <img class="card-wrapper__image" src="img/room_3.jpg" width="372" height="372" alt="Бизнес-люкс">
+        <source srcset="images/content/room_3_mobile.jpg" media="(max-width: 767px)">
+        <source srcset="images/content/room_3_tablet.jpg" media="(max-width: 1279px)">
+        <img class="card-wrapper__image" src="images/content/room_3.jpg" width="372" height="372" alt="Бизнес-люкс">
       </picture>
     </li>
   </ul>
 </main>
-<script src="js/ext.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
