--- a/source/index.html
+++ b/source/index.html
@@ -3,11 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Карточки номеров</title>
+  <title>Номера и цены</title>
   <link rel="icon" href="favicon.ico">
   <link rel="icon" href="images/favicons/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="images/favicons/apple.png">
   <link rel="manifest" href="manifest.webmanifest">
+  <link rel="preload" href="fonts/OpenSans-Regular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/OpenSans-Bold.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/Roboto-Regular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/Roboto-Medium.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/Roboto-Bold.woff2" type="font/woff2" as="font" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="page__body">
@@ -44,9 +49,9 @@
       </div>
       <div class="best-price"></div>
       <picture class="card-wrapper__image-container">
-        <source srcset="images/content/room_1_mobile.jpg" media="(max-width: 767px)">
-        <source srcset="images/content/room_1_tablet.jpg" media="(max-width: 1279px)">
-        <img class="card-wrapper__image" src="images/content/room_1.jpg" width="372" height="372" alt="Представительский люкс">
+        <source srcset="images/content/room-1-mobile.jpg" media="(max-width: 767px)">
+        <source srcset="images/content/room-1-tablet.jpg" media="(max-width: 1279px)">
+        <img class="card-wrapper__image" src="images/content/room-1-desktop.jpg" width="372" height="372" alt="Представительский люкс">
       </picture>
     </li>
     <li class="card-list__item card-wrapper card-wrapper--active">
@@ -79,9 +84,9 @@
         <span class="best-price__text">Гарантия лучшей цены!</span>
       </div>
       <picture class="card-wrapper__image-container">
-        <source srcset="images/content/room_2_mobile.jpg" media="(max-width: 767px)">
-        <source srcset="images/content/room_2_tablet.jpg" media="(max-width: 1279px)">
-        <img class="card-wrapper__image" src="images/content/room_2.jpg" width="372" height="372" alt="Дуплекс">
+        <source srcset="images/content/room-2-mobile.jpg" media="(max-width: 767px)">
+        <source srcset="images/content/room-2-tablet.jpg" media="(max-width: 1279px)">
+        <img class="card-wrapper__image" src="images/content/room-2-desktop.jpg" width="372" height="372" alt="Дуплекс">
       </picture>
     </li>
     <li class="card-list__item card-wrapper card-wrapper--active">
@@ -112,9 +117,9 @@
       </div>
       <div class="best-price"></div>
       <picture class="card-wrapper__image-container">
-        <source srcset="images/content/room_3_mobile.jpg" media="(max-width: 767px)">
-        <source srcset="images/content/room_3_tablet.jpg" media="(max-width: 1279px)">
-        <img class="card-wrapper__image" src="images/content/room_3.jpg" width="372" height="372" alt="Бизнес-люкс">
+        <source srcset="images/content/room-3-mobile.jpg" media="(max-width: 767px)">
+        <source srcset="images/content/room-3-tablet.jpg" media="(max-width: 1279px)">
+        <img class="card-wrapper__image" src="images/content/room-3-desktop.jpg" width="372" height="372" alt="Бизнес-люкс">
       </picture>
     </li>
   </ul>
